syntax = "proto3";
package order;

import "google/protobuf/empty.proto";
import "postgrpc/api/annotations.proto";

service FieldOrder {
  rpc TestFieldOrdering (TestValue) returns (TestValue) {
    option (postgrpc.query) = {
      sql: "select $1 as first, $2::int as second"
    };
  }
}

message TestValue {
  int32 second = 2;
  string first = 1;
}
