syntax = "proto3";
package invalid;

import "google/protobuf/empty.proto";
import "postgrpc/api/annotations.proto";

service InvalidSql {
  rpc TestInvalidSql (google.protobuf.Empty) returns (TestValue) {
    option (postgrpc.query) = {
      sql: "select this is invalid"
    };
  }
}

message TestValue {
  int32 value = 1;
}
