syntax = "proto3";
package missing_message;

import "google/protobuf/empty.proto";
import "postgrpc/api/annotations.proto";

service MissingMessage {
  rpc TestMissingInput (TestInput) returns (TestValue) {
    option (postgrpc.query) = {
      sql: "select 1::int as value"
    };
  }
}

message TestValue {
  int32 value = 1;
}
